<resources>
    <string name="app_name">#샵매니저</string>

    <string name="kakao_app_key">45ca9c88a1f6be5987da7e1f7c7f61bf</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut gravida ipsum. Etiam ut diam mauris. Ut sit amet sodales turpis. Ut dictum imperdiet erat eget tincidunt. Fusce rhoncus mi dignissim, hendrerit ante et, mattis ipsum. Sed consequat posuere velit ac finibus. Donec sed aliquam dui. Quisque et ornare nunc, nec convallis est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sem eros, posuere interdum condimentum nec, auctor in neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus vitae tempor risus. Pellentesque sit amet metus maximus, accumsan velit et, tempor neque.</string>

    <string name="navigation_drawer_open">열기</string>
    <string name="navigation_drawer_close">닫기</string>

    <string name="common_hash_shop">#샵</string>
    <string name="common_manager">매니저</string>
    <string name="common_shop_manager">#샵매니저</string>

    <string name="common_loading">로딩중…</string>
    <string name="common_search">검색</string>
    <string name="common_name">이름</string>
    <string name="common_name_necessary">이름(필수)</string>
    <string name="common_phone">전화번호</string>
    <string name="common_visit">방문</string>
    <string name="common_recent_visit">최근 방문일</string>
    <string name="common_total_price">구매금</string>
    <string name="common_price">금액</string>
    <string name="common_money">가격</string>
    <string name="common_confirm">확인</string>
    <string name="common_edit">수정</string>
    <string name="common_cancel">취소</string>
    <string name="common_register">등록</string>
    <string name="common_memo">메모</string>
    <string name="common_optional">(선택사항)</string>
    <string name="common_sort">정렬</string>
    <string name="common_add">추가</string>
    <string name="common_category">카테고리</string>
    <string name="common_delete">삭제</string>
    <string name="common_cash">현금</string>
    <string name="common_card">카드</string>
    <string name="common_setting">설정</string>
    <string name="common_profile">프로필</string>

    <string name="action_edit">수정하기</string>
    <string name="action_delete">삭제하기</string>
    <string name="action_make">만들기</string>

    <string name="error_common">알수없는 에러가 발생했습니다.</string>
    <string name="error_network">네트워크가 원활하지 않습니다.\n잠시후 다시 시도해주세요</string>

    <string name="message_add_complete">추가되었습니다</string>
    <string name="message_edit_complete">수정되었습니다</string>

    <string name="format_day_before">%d일 전</string>
    <string name="format_count_text">%d / %d</string>
    <string name="format_count_customer">고객 (%d명)</string>
    <string name="format_price">%s원</string>
    <string name="format_search_customer">검색 결과 (%d명)</string>
    <string name="format_month">%d월</string>
    <string name="format_year">%d년</string>

    <string name="hint_search">이름,전화번호로 검색</string>

    <string name="title_select_business_type">업종 선택</string>

    <string name="title_add_customer">고객 추가</string>
    <string name="title_edit_customer">고객 정보 수정</string>

    <string name="menu_nav_category">카테고리 설정</string>
    <string name="menu_nav_data">데이터 백업/복구</string>
    <string name="menu_nav_premium">프리미엄 구매</string>
    <string name="menu_nav_analysis">통계</string>
    <string name="menu_nav_information">정보/문의</string>
    <string name="menu_nav_review">평점과 리뷰쓰기</string>
    <string name="menu_nav_report">버그 신고 및 제안</string>
    <string name="menu_nav_version">버전 확인</string>
    <string name="menu_nav_etc">기타</string>
    <string name="menu_nav_term_service">서비스 이용약관</string>
    <string name="menu_nav_term_private">개인정보 처리방침</string>
    <string name="menu_nav_open_source">오픈소스 라이센스</string>

    <string name="error_not_exist_name">이름을 입력해주세요</string>

    <string name="title_add_category">카테고리 등록</string>
    <string name="message_new_category">새로운 카테고리 등록</string>
    <string name="message_need_category_name">카테고리명을 입력해주세요</string>
    <string name="hint_new_category">새 카테고리</string>

    <string name="action_add_product">상품 추가</string>
    <string name="message_new_product">새로운 상품등록</string>
    <string name="hint_new_product">새 상품</string>
    <string name="message_error_no_input_price">금액을 입력해주세요</string>
    <string name="message_error_price_must_over_zero">금액은 0원 이상이여야 합니다</string>
    <string name="message_delete_success">삭제되었습니다.</string>

    <string name="message_no_input_business_name">개인/사업자명을 등록해주세요</string>

    <!-- 정렬 -->
    <string name="sort_name">이름순 정렬</string>
    <string name="sort_price">매출순 정렬</string>
    <string name="sort_visit">방문 횟수순 정렬</string>
    <string name="sort_create">등록일순 정렬</string>
    <string name="sort_recent">최근 방문순 정렬</string>

    <!-- 이미지 크롭 -->
    <string name="title_crop_image">사진 자르기</string>

    <!-- 권한 처리 -->
    <string name="permission_dialog_title">권한 요청</string>
    <string name="permission_need_permission">권한이 필요합니다.</string>

    <!-- 고객정보 화면 -->
    <string name="title_customer_info">고객 정보</string>
    <string name="format_name">이름 : </string>
    <string name="format_phone">전화번호 : </string>
    <string name="format_visit_count">방문 : </string>
    <string name="format_total_price">누적 금액 : </string>
    <string name="format_recent">최근 방문일 : </string>
    <string name="format_memo">메모 : </string>
    <string name="empty_result_search">검색된 고객이 없습니다</string>
    <string name="empty_customer">고객이 등록되지 않았습니다\n오른쪽 위 +버튼을 눌러 첫번째 고객을 등록해주세요!</string>
    <string name="error_not_registered_phone">전화번호가 등록되지 않은 고객입니다.</string>
    <string name="error_deleted_customer">삭제된 고객입니다.</string>
    <string name="alert_delete_customer">정말 %s 고객님을 삭제하시겠습니까?\n\n고객 프로필 및 매출내역이 삭제되며\n삭제된 데이터는 복구할 수 없습니다.</string>

    <!-- 매출 등록 화면 -->
    <string name="title_sales">매출 등록</string>
    <string name="message_total_price">판매 금액</string>
    <string name="hint_enter_memo">메모를 입력해주세요</string>
    <string name="empty_sales">+ 버튼을 눌러\n판매 내역을 등록해주세요!</string>
    <string name="error_no_category">카테고리가 등록되지 않았습니다</string>
    <string name="error_no_product">상품이 등록되지 않았습니다</string>
    <string name="error_empty_product_wrapper">하나 이상의 상품을 선택해주세요</string>
    <string name="message_deleted_product">삭제된 상품</string>

    <!-- 카테고리 등록 화면 -->
    <string name="empty_category">+ 버튼을 눌러\n카테고리 등록해주세요!</string>
    <string name="alert_delete_category">정말 %s 카테고리를 삭제하시겠습니까?\n\n연관된 상품 및 매출 내역이 삭제되며\n삭제된 데이터는 복구할 수 없습니다.</string>
    <string name="alert_delete_product">정말 %s 상품을 삭제하시겠습니까?\n\n연관된 매출 내역이 삭제되며\n삭제된 데이터는 복구할 수 없습니다.</string>

    <!-- 통계 화면 -->
    <string name="chart_total_price">총 매출</string>
    <string name="chart_won">원</string>
    <string name="title_balance_history">정산내역</string>
    <string name="format_count">(%d건)</string>
    <string name="format_date">%d일(%s)</string>
    <string name="empty_chart">등록된 매출 내역이 없습니다</string>
    <string name="title_year_statistic">연간 매출 통계</string>
    <string name="title_graph_month_sales_price">월별 매출</string>
    <string name="title_graph_month_sales_count">월별 판매실적</string>
    <string name="message_chart_no_data_price">매출 내역이 없습니다</string>
    <string name="message_chart_no_data_count">판매 내역이 없습니다</string>
    <string name="info_price_format_won">단위 : 원</string>
    <string name="chart_format_price">%d원</string>
    <string name="info_price_format_count">단위 : 건</string>
    <string name="chart_format_count">%d건</string>

    <!-- 카카오로 시작하기 화면 -->
    <string name="message_hello">안녕하세요</string>
    <string name="message_introduce_tail">입니다.</string>
    <string name="action_sign_in_kakao">카카오 계정으로 로그인</string>

    <!-- 가입 화면 -->
    <string name="title_select_business_category">업종 선택</string>
    <string name="common_business_category">업종</string>
    <string name="business_category_beauty">뷰티</string>
    <string name="business_category_business">영업</string>
    <string name="business_category_lesson">레슨</string>
    <string name="business_category_health">의료/건강</string>
    <string name="business_category_education">교육</string>
    <string name="business_category_etc">기타</string>
    <string name="business_name">개인 / 사업자명</string>
    <string name="message_error_not_select_business_type">업종을 선택해주세요</string>

    <!-- 설정 -->
    <string name="setting_title_quick_panel">메인메뉴 퀵패널 사용</string>
    <string name="setting_detail_quick_panel">초성으로 이동할수 있도록 퀵패널을 사용합니다</string>
    <string name="setting_title_contact">전화번호부 가져오기</string>
    <string name="setting_detail_contact">기기내에 등록된 전화번호로 고객을 등록합니다</string>
    <string name="message_alert_sign_out">정말 로그아웃 하시겠습니까?\n데이터가 전부 초기화됩니다</string>
    <string name="action_sign_out">로그아웃</string>

    <!-- 버그 제보 -->
    <string name="report_body_long">OS Version : %s\nApp Version : %s\nUser Id : %s\nKakao Id : %s\nUser Name : %s\n\n\n</string>
    <string name="report_body_short">OS Version : %s\nApp Version : %s\n\n\n</string>

    <!-- 버전 체크 -->
    <string name="title_version_check">버전 확인</string>
    <string name="action_update">업데이트</string>
    <string name="current_version">현재버전</string>
    <string name="latest_version">최신버전</string>
    <string name="message_network_not_enabled">네트워크가 불안정합니다</string>
    <string name="message_version_latest">최신버전입니다</string>

    <!-- 데이터 백업 -->
    <string name="title_data_back_up">데이터 백업 / 복구</string>
    <string name="action_make_back_up">백업 만들기</string>
    <string name="action_export_back_up">백업 파일 내보내기</string>
    <string name="action_import_back_up">백업 파일 가져오기</string>
    <string name="message_back_up_file_path">%s\n경로에 백업파일이 생성됩니다</string>
    <string name="title_dialog_make_back_up_file">파일명을 입력해주세요</string>
    <string name="hint_dialog_back_up_file_name">(ex) 20180824_backup</string>
    <string name="error_invalid_file_name">유효하지 않은 파일명입니다</string>
    <string name="message_make_back_up_file_complete">%s 경로에 저장되었습니다</string>
    <string name="message_import_back_up_complete">데이터를 성공적으로 가져왔습니다.\n어플리케이션을 재시작합니다.</string>
    <string name="message_choose_export_application">내보낼 어플리케이션 선택</string>
    <string name="message_chhose_upload_file">업로드할 파일을 선택해주세요</string>
    <string name="error_not_have_file_explorer">파일 매니저 어플리케이션이 없습니다</string>
    <string name="message_dialog_import_alert_html">데이터를 가져오기전, 최신버전을 확인해주세요.\n최신버전이 아닐경우 데이터가 정상적으로\n나오지 않을수도 있습니다.</string>
    <string name="action_import">백업 가져오기</string>
</resources>
