<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_nav_category"
            android:icon="@drawable/ic_category_gray_vector"
            android:title="@string/menu_nav_category" />
        <item
            android:id="@+id/menu_nav_data"
            android:icon="@drawable/ic_backup_gray_vector"
            android:title="@string/menu_nav_data" />
        <item
            android:id="@+id/menu_nav_premium"
            android:icon="@drawable/ic_star_gray_vector"
            android:title="@string/menu_nav_premium" />
        <item
            android:id="@+id/menu_nav_analysis"
            android:icon="@drawable/ic_chart_gray_vector"
            android:title="@string/menu_nav_analysis" />
        <!-- 기능이 얼마없어서 일단 뺌 -->
        <!--
        <item
            android:id="@+id/menu_nav_setting"
            android:icon="@drawable/ic_settings_gray_vector"
            android:title="@string/common_setting" />
            -->
    </group>

    <item android:title="@string/menu_nav_information">
        <menu>
            <item
                android:id="@+id/menu_nav_review"
                android:title="@string/menu_nav_review" />
            <item
                android:id="@+id/menu_nav_report"
                android:title="@string/menu_nav_report" />
            <item
                android:id="@+id/menu_nav_version"
                android:title="@string/menu_nav_version" />
        </menu>
    </item>

    <item android:title="@string/menu_nav_etc">
        <menu>
            <item
                android:id="@+id/menu_nav_term_service"
                android:title="@string/menu_nav_term_service" />
            <item
                android:id="@+id/menu_nav_term_private"
                android:title="@string/menu_nav_term_private" />
            <item
                android:id="@+id/menu_nav_open_source"
                android:title="@string/menu_nav_open_source" />
        </menu>
    </item>

</menu>
