<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="15dp"
                    android:src="@drawable/ic_back_white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/title_data_back_up"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/btn_make_back_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/selector_solid_radius_yellow"
        android:text="@string/action_make_back_up"
        android:textColor="@color/colorGray1" />

    <Button
        android:id="@+id/btn_export_back_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/selector_solid_radius_yellow"
        android:text="@string/action_export_back_up"
        android:textColor="@color/colorGray1" />

    <Button
        android:id="@+id/btn_import_back_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/selector_solid_radius_yellow"
        android:text="@string/action_import_back_up"
        android:textColor="@color/colorGray1" />

    <TextView
        android:id="@+id/tv_message_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/message_back_up_file_path"
        android:textColor="@color/colorGray3"
        android:textSize="13sp" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_logo_gray"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <com.xema.shopmanager.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_hash_shop"
            android:textColor="@color/colorGray4"
            android:textSize="15dp"
            app:font_name="daum_r.ttf"
            tools:ignore="HardcodedText,SpUsage" />

        <com.xema.shopmanager.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_manager"
            android:textColor="@color/colorGray4"
            android:textSize="15dp"
            app:font_name="daum_sb.ttf"
            tools:ignore="HardcodedText,SpUsage" />
    </LinearLayout>

</LinearLayout>