<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="12dp"
    android:paddingEnd="12dp"
    android:paddingLeft="14dp"
    android:paddingRight="16dp"
    android:paddingStart="14dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="31일(목)"
        android:textColor="#4a4a4a"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/title_balance_history"
        android:textColor="@color/colorGray0"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:text="@string/format_count"
        android:textColor="@color/colorGray3"
        android:textSize="14sp" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_price"
        android:textColor="@color/colorRed"
        android:textSize="14sp" />

</LinearLayout>