<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellow"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.7" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.xema.shopmanager.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_hello"
            android:textColor="@color/colorGray1"
            android:textSize="18dp"
            app:font_name="daum_r.ttf"
            tools:ignore="HardcodedText,SpUsage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.xema.shopmanager.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_shop_manager"
            android:textColor="@color/colorGray1"
            android:textSize="21dp"
            app:font_name="daum_sb.ttf"
            tools:ignore="HardcodedText,SpUsage" />

        <com.xema.shopmanager.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_introduce_tail"
            android:textColor="@color/colorGray1"
            android:textSize="21dp"
            app:font_name="daum_r.ttf"
            tools:ignore="HardcodedText,SpUsage" />
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_logo"
        tools:ignore="ContentDescription" />

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.2" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorGray1"
        android:text="@string/action_sign_in_kakao"
        android:textColor="@color/colorWhite" />
</LinearLayout>