<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorYellow"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chart_total_price"
                android:textColor="@color/colorGray4"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_price"
                android:textColor="@color/colorGray1"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_graph_month_sales_price"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bc_month_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_graph_month_sales_count"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bc_month_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp" />
    </LinearLayout>
</LinearLayout>