<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <CheckedTextView
        android:id="@+id/tv_sort_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:checkMark="@drawable/selector_check_mark"
        android:checked="true"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:text="@string/sort_name"
        android:textColor="@color/colorGray1"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorGray4" />

    <CheckedTextView
        android:visibility="gone"
        android:id="@+id/tv_sort_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:checkMark="@drawable/selector_check_mark"
        android:checked="false"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:text="@string/sort_price"
        android:textColor="@color/colorGray1"
        android:textSize="14sp" />

    <View
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorGray4" />

    <CheckedTextView
        android:visibility="gone"
        android:id="@+id/tv_sort_visit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:checkMark="@drawable/selector_check_mark"
        android:checked="false"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:text="@string/sort_visit"
        android:textColor="@color/colorGray1"
        android:textSize="14sp" />

    <View
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorGray4" />

    <CheckedTextView
        android:id="@+id/tv_sort_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:checkMark="@drawable/selector_check_mark"
        android:checked="false"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:text="@string/sort_create"
        android:textColor="@color/colorGray1"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorGray4" />

    <CheckedTextView
        android:visibility="gone"
        android:id="@+id/tv_sort_recent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:checkMark="@drawable/selector_check_mark"
        android:checked="false"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:text="@string/sort_recent"
        android:textColor="@color/colorGray1"
        android:textSize="14sp" />
</LinearLayout>